Finished ch. 14; note that adding an overflow: auto property to the divs made overflowing of labels work correctly.

--- a/html_css_test/styles/ch10.css
+++ b/html_css_test/styles/ch10.css
@@ -35,7 +35,8 @@ h1 {
     
 .poemgroup {   
 	border: 1px solid #665544; 
-	padding: 10px;     
+	padding: 10px;   
+	list-style-type: none;      
 }
 
 div.poemgroup {   
@@ -50,7 +51,8 @@ div.poemgroup a {
       
 /* any ul child of a .poemgroup-class tag will have this style */
 .poemgroup ul {    
-	font-size: .8em;
+	font-size: .8em; 
+	list-style: square; /* NB that we can add 'inside' or 'outside' to this, like "list-style: outside square;" */
 }    
      
 /* for text we want to hide but still want to have available to screen readers, etc. : 
@@ -71,13 +73,60 @@ a:visited {
 	
 a:hover {  
 	color: deeppink;
-	text-decoration: underline; }     
+	text-decoration: underline; }    
+	
+input:focus[type="text"], input:focus[type="password"] {  
+		background-color: lightgray;
+		text-decoration: underline; }
  
 fieldset.descriptive { 
 	min-width: 400px; 
 	max-width: 650px; 
 	text-align: left; 
 	margin: 0px;    
-	border: 2px solid #000000; 
+	border: 1px solid #dcdcdc; 
 	border-radius : 10px;   
+}  
+
+legend { 
+	background-color: #efefef; 
+	border: 1px solid #dcdcdc; 
+	border-radius : 10px; 
+	padding : 5px 10px; 
+	text-align : left; 
+	text-transform : uppercase; 
+	} 
+
+table.editionstable {    
+	border : 2px solid black;   
+	border-collapse : separate;
+	empty-cells : hide;
+	}  
+
+table.editionstable th[scope="col"] { 
+	border-bottom : 2px solid black;  
+	}	    
+
+table.editionstable td { 
+	background-color: #efefef;
+	}   
+
+div { 
+	border-bottom: 1px solid #efefef; 
+	margin: 10px; 
+	padding-bottom: 10px; 
+	width: 500px; 
+	overflow: auto;
+}
+
+label.title, span.title { 
+	float: left; 
+	width: 200px; 
+	text-align: right; 
+	padding-right: 10px; 
+	overflow: hidden;
+}  
+
+submit { 
+	text-align: right; 
 }
